<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/menu_seccion_1"
            android:icon="@drawable/Casa"
            android:title="@string/Home"/>
        <item
            android:id="@+id/menu_seccion_2"
            android:icon="@drawable/Busqueda"
            android:title="@string/Lugares"/>
        <item
            android:id="@+id/menu_seccion_3"
            android:icon="@drawable/cosmos"
            android:title="@string/Historial"/>
    </group>

    <item
        android:id="@+id/navigation_subheader"
        android:title="Más">
        <menu>
            <item
                android:id="@+id/menu_opcion_1"
                android:icon="@drawable/cosmos"
            android:title="@string/Ayuda"/>
            <item
                android:id="@+id/menu_opcion_2"
                android:icon="@drawable/cosmos"
                android:title="@string/Cerrar"/>
        </menu>
    </item>
</menu>