<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.moviles.proyectomoviles.Main2Activity"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">

    <Button
        android:id="@+id/Mapa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/map"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/lugar"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="50dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/Camara"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cam"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="@+id/lugar"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="151dp"
        app:layout_constraintLeft_toLeftOf="@+id/lugar" />

    <Button
        android:id="@+id/lugar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Lugares"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/Camara"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="32dp"
        app:layout_constraintLeft_toLeftOf="@+id/Mapa" />
</android.support.constraint.ConstraintLayout>
